crates/rx/tests/ui/macro_invalid_range.rs
fn main() {
    let _ = rx::pattern! {
        set(range("z", "a"))
    };
}
